--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,3 +52,43 @@ footer p {
     color: #BBBBBB;
     margin-left: -0.5rem;
 }
+
+.title-font {
+    font-family: "Cinzel", serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+}
+
+.body-light {
+    font-family: "Lato", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+}
+
+.button-principal {
+    background-color: #0b1e2c;
+    color: #BBBBBB;
+    border-color: #0b1e2c;
+}
+
+.button-principal:hover {
+    background-color: #09212c;
+    border-color: #09212c;
+}
+
+.carrusel-text {
+    font-family: "Lato", sans-serif;
+    font-weight: 500;
+}
+
+/* Sombra para hacer legible el texto en el carrusel */
+.shadow-overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 50%;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
+    border-radius: 0 0 0.75rem 0.75rem;
+}
