--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,3 +92,20 @@ footer p {
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
     border-radius: 0 0 0.75rem 0.75rem;
 }
+
+#productos h5 {
+    font-family: "Lato", sans-serif;
+    font-weight: 500;
+}
+
+#productos p {
+    font-family: "Lato", sans-serif;
+    font-weight: 300;
+}
+
+.custom-bg {
+    background-image: linear-gradient(to top, white, transparent 60%), url('/assets/img/fondo.png');
+    background-size: cover;
+    background-repeat: no-repeat; /* Evita la repetición del degradado */
+    padding-bottom: 4.5rem;
+}
